Fixed some overflow issues

--- a/styles/home/home.sass
+++ b/styles/home/home.sass
@@ -120,7 +120,7 @@
             max-width: 482px
     .destinations-container
         width: 100%
-        height: 60vh
+        height: 70vh
         background-size: cover
         background-position: center
         background-repeat: no-repeat
